fix overflow issue

--- a/fall2023/jmoore143/projects/css/project.css
+++ b/fall2023/jmoore143/projects/css/project.css
@@ -5,7 +5,7 @@ main {
     margin-right: 10%;
     padding-bottom: 300px;
     width: 80%;
-    overflow-y: auto;
+    /* overflow-y: auto; */
 }
 
 .vtv-wrapper {
